--- a/.env
+++ b/.env
@@ -18,3 +18,11 @@
 APP_ENV=dev
 APP_SECRET=90a0a7ed3ad09ca6339817e11f6e0942
 ###< symfony/framework-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+#MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+KAFKA_URL=kafka://kafka:9092
+###< symfony/messenger ###
